syntax = "proto3";

package scanner.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/api/http.proto";

service ScannerService {
  rpc Scan (ScanRequest) returns (ScanResponse) {
    option (google.api.http) = {
      post: "/v1/scan"
      body: "sbom"
    };
  }

  rpc ScanResults (ScanStatusRequest) returns (ScanReportResponse) {
    option (google.api.http) = {
      get: "/v1/scan"
    };
  }
}

message ScanRequest {
  string sbom = 1;
}

message ScanResponse {
  string report_id = 1;
}

message ScanReport {
  repeated string vulnerabilities = 1;
}

message ScanStatusRequest {
  string report_id = 1;
}

message ScanReportResponse {
  ScanReport report = 1;
}
